fixed right white space problem ?

--- a/mystyle.css
+++ b/mystyle.css
@@ -15,7 +15,7 @@ h6 {
 }
 
 .spacing {
-    padding-top: 10%;
+  padding-top: 10%;
 }
 
 .spacing-s {
@@ -170,9 +170,7 @@ a {
 
 .topnav {
     position: relative;
-    padding: 30px 0;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding: 30px 10%;
     overflow: hidden;
   }
   
@@ -220,3 +218,8 @@ a {
       transform: none;
     }
   }
+
+  body {
+    overflow-x: hidden;
+}
+
